syntax = "proto3";

option go_package = "github.com/jsirianni/systemstat/internal/service/database/api";

package api;

service Api {
    rpc Status (HealthRequest) returns (Health) {}
    rpc GetAccount (GetAccountRequest) returns (Account) {}
    rpc CreateToken (CreateTokenRequest) returns (Token) {}
    rpc CreateAccount (CreateAccountRequest) returns (Account) {}
}

message HealthRequest {

}

message Health {

}

message CreateAccountRequest {
    string token = 1;
    string email = 2;
}

message GetAccountRequest {
    string account_id = 1;
}

message Account {
    string account_id = 1;
    string root_api_key = 2;
    string alert_type = 3;
    bytes alert_config = 4;
    string admin_email = 5;
}

message CreateTokenRequest {

}

message Token {
    string token = 1;
    bool claimed = 2;
    string claimed_by = 3;
}
